packages/fuels-macros/tests/ui/setup_contract_test/unknown_contract.stderr
error: Contract is unknown
 --> tests/ui/setup_contract_test/unknown_contract.rs:7:20
  |
7 |         contract = "SomeUnknownContract",
  |                    ^^^^^^^^^^^^^^^^^^^^^

error: Consider adding: Contract(name="SomeUnknownContract", abi=...)
 --> tests/ui/setup_contract_test/unknown_contract.rs:4:5
  |
4 |     Abigen(Contract(abi = "something.json", name = "MismatchedName")),
  |     ^^^^^^
