packages/fuels-macros/tests/ui/setup_contract_test/unknown_contract.rs
use fuels_macros::setup_program_test;

setup_program_test!(
    Abigen(Contract(abi = "something.json", name = "MismatchedName")),
    Deploy(
        name = "some_instance",
        contract = "SomeUnknownContract",
        wallet = "some_wallet"
    )
);

fn main() {}
